Fixed mousetracking on smaller screens

--- a/tankstyle.css
+++ b/tankstyle.css
@@ -15,6 +15,8 @@
     background-size: cover;
     color: #f3f3f3;
     width: 100%;
+    max-width: 1280px;
+    max-height: 720px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
